<resources>
    <string name="app_name">Assignment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ChariBros Event</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_event">Event</string>
    <string name="menu_organize">Organize Event</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_contact">Contact Us</string>
    <string name="contact_header">Header Image</string>
    <string name="contact_h1">CHARISBROS EVENT</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out_menu">Sign Out</string>
    <string name="title_activity_organize_event">OrganizeEvent</string>
    <string name="event_name">Event Name</string>
    <string name="organize_header">Organize Page</string>
    <string name="name_event">Name</string>
    <string name="number_of_pax">Number of Pax</string>
    <string name="amount">0-99</string>
    <string name="area">Area</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title_activity_view_event">ViewEvent</string>
    <string name="tv_event_name">Event Name</string>
    <string name="tv_organiser">Organiser</string>
    <string name="tv_pax">pax require</string>
    <string name="organiser_header">Organiser:</string>
    <string name="pax_header">Pax:</string>
    <string name="pax_joined">0</string>
    <string name="label">/</string>
    <string name="title_acitivity_event_detail">EventDetail</string>
    <string name="charibros">chariBroImage</string>
    <string name="description_header">Description</string>
    <string name="description_hint">Description</string>
    <string name="button_join">Join Event</string>
    <string name="detail_heading">Event</string>
    <string name="title_activity_my_event">MyEvent</string>
</resources>
