<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_menu_event"
            android:title="@string/menu_event" />
        <item
            android:id="@+id/nav_organize"
            android:icon="@drawable/ic_menu_organize"
            android:title="@string/menu_organize" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title= "@string/menu_gallery" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_contact"
                android:title="@string/menu_contact" />
        </menu>
    </item>


</menu>
