<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageHeader"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/charibros"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_charibros_foreground"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tv_event_name"
                android:textSize="15sp"

                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organiser_header" />

                <TextView
                    android:id="@+id/tvOrganiser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/tv_organiser" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pax_header" />

                <TextView
                    android:id="@+id/tvPaxExist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pax_joined" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/label" />

                <TextView
                    android:id="@+id/tvPaxRequire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/tv_pax"
                    android:inputType="number" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/tvArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:hint="Area"
                android:layout_marginRight="10dp"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:hint="Date"
                android:layout_marginRight="10dp"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:hint="time"
                android:layout_marginRight="10dp"
                android:textAlignment="textEnd" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>


